Complete property, tenant and rental modules